change gallery layout

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 - name: About
-  link: /
+  link: /about.html
 - name: Fanzines
   link: /
 - name: Photos
-  link: /about.html
+  link: /photos.html
